syntax = "proto3";

package calculator;

option java_package = "com.act.infinity.calculator";
option java_multiple_files = true;

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum =1;
}

service CalculatorService {
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}